# fall-detector

./: .gitignore  README.md
FallDetector/: FallDetector.sln
FallDetector/FallDetector/: CMakeLists.txt  FallDetector.vcxproj  FallDetector.vcxproj.filters  Fruit.cpp  Fruit.h  Main.cpp  OpenCV.props  VideoProcessor.cpp  VideoProcessor.h  Visual Leak Detector.props  main.cpp  utilities.cpp  utilities.h  video_processor.cpp  video_processor.h
FallDetector/test_library/: ReadMe.txt  stdafx.cpp  (+4 more)
camcv/: CMakeLists.txt  camcv.c  camcv.cbp  camcv.depend  camcv.layout  camcv.pro  main.cpp
fall_detector/: application.cpp  application.h  background_subtractor_fd.cpp  background_subtractor_fd.h  camera_board.c  camera_board.h  data_collector.cpp  data_collector.h  fall_detector.cbp  fall_detector.depend  fall_detector.layout  fall_detector.pro  fall_detector.sln  feature.cpp  feature.h  feature_collection.h  features.cpp  features.h  finite_state_machine.cpp  finite_state_machine.h  frame_data.cpp  frame_data.h  frame_info.cpp  frame_info.h  helpers.cpp  helpers.h  interval_data.cpp  interval_data.h  interval_info.cpp  interval_info.h  interval_processor.cpp  interval_processor.h  main.cpp  mog2_public.cpp  mog2_public.h  parameters.cpp  parameters.h  video_data.cpp  video_data.h  video_processor.cpp  (+2 more)
fall_detector_lib/: fall_detector_lib.cpp  fall_detector_lib.h  fall_detector_lib.pro  fall_detector_lib_global.h  feature.cpp  feature_collection.cpp  finite_state_machine.cpp  finite_state_machine.h  frame_info.cpp  helpers.cpp  interval_processor.cpp  interval_processor.h
(+22 files in other folders)
